--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   gtag('config', 'G-WSMYELV32L');
 </script>
 
-<meta name="description" content="A unblocked games site that is easy to deploy, has tons of games, and is nice to the eyes">
+<meta name="description" content="A unblocked games site that is easy to deploy, has tons of games, and is very sneaky >:)">
  
 <link rel="stylesheet" href="style.css">
 <header>
@@ -31,17 +31,17 @@
 
 <hr>
     
-<title>SimpleGime</title>
+<title>New Tab</title>
   
 <div class="typewriter">
-        <h1>SimpleGime: Fast, Easy, Efficient.</h1>
+        <h1>PotatoGime: Definitley Not Illegal.</h1>
 </div>
 
 <br>
   
 <p1>A simple, easy to edit, barebones game site designed for quick hassle-free deployment. Games taken from 3kho's collection. To find your favorite game, use the find tool on your browser (Ctrl+F). </p1>
 
-<p1><b>WILL NOT TAKE RECOMMENDATIONS</b></p1>
+<p1><b>WILL NOT TAKE RECOMMENDATIONS, sorry</b></p1>
 
 <br>
 <br>
@@ -1046,3 +1046,4 @@
 <hr>
 
 <p1>&copy; Bighummus Games</p1>
+<p1>All credit goes to Bighummus69 and 3kho.</p1>
